--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title style="font-family: Ascharge">Freedom</title>
-    <link rel="icon" href="resources/img/prism.ico" type="image/x-icon">
+    <title style="font-family: Ascharge">[REDACTED]</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://pyscript.net/latest/core.js"></script>
 </head>
