--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://pyscript.net/latest/core.js"></script>
 </head>
-<body style="background-color: black; color: white;">
-    <h1 style="text-align: center; margin-top: 15%; font-size: 500%;">The life<br>has been<br>compromised.</h1>
+<body style="background-color: black; color: white; zoom:80%;">
+    <div style="display: flex; justify-content: center; align-items: center; height: 115vh; text-align: center;">
+        <h1 style="text-align: center; vertical-align: middle; font-size: 500%;">The life<br>has been<br>compromised.</h1>
+    </div>
 </body>
