--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body style="background-color: black; color: white; zoom:80%;">
     <div style="display: flex; justify-content: center; align-items: center; height: 115vh; text-align: center;">
-        <h1 style="text-align: center; vertical-align: middle; font-size: 5vw;">The life<br>has been<br>uncompromised.</h1>
+        <h1 style="text-align: center; vertical-align: middle; font-size: 500%;">The life<br>has been<br>uncompromised.</h1>
     </div>
 </body>
